fix any-questions__socials being misaligned

--- a/css/style.css
+++ b/css/style.css
@@ -1100,7 +1100,7 @@ body {
 
 .any-questions__socials {
     display: flex;
-    align-items: center;
+    justify-content: center;
     gap: 15px;
     margin-top: 26px;
 }
